[package]
name = "prospect-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
log = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rustls = "0.20"
rustls-pemfile = "1.0"
rust-crypto = "0.2"

tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"

reqwest = { version = "0.11", features = ["json"] }
warp = { version = "0.3", features = ["tls"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
